--- a/css/style-67.css
+++ b/css/style-67.css
@@ -550,9 +550,9 @@ hr {
 	z-index: 10;
 }
 .ui-67 .ui-head img{
-	width:160px;
+	width:190px;
 	border-radius:100%;
-	margin:0px auto;
+	margin:-20px auto;
 	border:4px solid #fff;
 	box-shadow:0px 0px 15px rgba(0,0,0,0.1);
 }
@@ -751,4 +751,7 @@ hr {
 }
 #psteps{
 	text-align:center;
+}
+.newimg{
+
 }
