--- a/css/style-67.css
+++ b/css/style-67.css
@@ -752,6 +752,7 @@ hr {
 #psteps{
 	text-align:center;
 }
-.newimg{
-
+.iframee{
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+	
 }
