--- a/css/style-67.css
+++ b/css/style-67.css
@@ -753,6 +753,8 @@ hr {
 	text-align:center;
 }
 .iframee{
-	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-	
+	/*box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);*/
+	font-size:150%;
+	padding: 0 0 0 0;
+	margin: 0 0 0 0;
 }
