--- a/css/style-67.css
+++ b/css/style-67.css
@@ -749,8 +749,8 @@ hr {
 .pstep{
 	text-align: justify;
 }
-#psteps{
-	text-align:center;
+.psteps{
+	text-align: center;
 }
 .iframee{
 	/*box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);*/
@@ -758,4 +758,4 @@ hr {
 	padding: 0 0 0 0;
 	margin: 0 0 0 0;
 	margin-top: 80px;
-}
+} 
